import redux and design action

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {#    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">#}
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -28,6 +29,7 @@
       To create a production bundle, use `npm run build`.
     -->
     <script src="/static/dist/vendor.js"></script>
+{#    <script src="/static/dist/3.js"></script>#}
     <script src="/static/dist/App.js"></script>
     <script src="/static/dist/index.js"></script>
   </body>
