--- a/todolist/src/src/component/header/Header.scss
+++ b/todolist/src/src/component/header/Header.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 43px;
   top: 0;
+  text-align: center;
   background: #db4c3f repeat 0 0 none;
   @include box-shadow(0, 1px, rgba(0,0,0,0.15), 2px);
   .inner {
@@ -13,13 +14,52 @@
     max-width: 950px;
     height: 100%;
 
+    // header section
     .section {
-      display: inline-block;
+      display: block;
       height: 100%;
+      color: #ffffff;
     }
 
+    .left {
+      float: left;
+      opacity: 0;
+    }
+
+    .center {
+      display: inline-block;
+      margin: 0 auto;
+
+      .search-icon {
+        position: absolute;
+        z-index: 15;
+        margin-top: 14px;
+        margin-left: 8px;
+        cursor: text;
+        color: #222222;
+      }
+
+      .text-input {
+        margin-top: 8px;
+        padding: 4px 4px 4px 30px;
+        width: 300px;
+        box-sizing: border-box;
+        color: #222222;
+        //color: #ffffff;
+        border: 1px solid transparent !important;
+        border-radius: 2px;
+      }
+    }
+
+    // header right
     .right {
+      float: right;
+      width: auto;
+      cursor: pointer;
       right: 0;
+      .plus {
+        padding: 12px 10px 0 10px;
+      }
     }
   }
 }
