--- a/todolist/src/src/component/header/Header.scss
+++ b/todolist/src/src/component/header/Header.scss
@@ -57,7 +57,7 @@
       width: auto;
       cursor: pointer;
       right: 0;
-      .plus {
+      .plus, .sort {
         padding: 12px 10px 0 10px;
       }
     }
