--- a/todolist/src/src/page/root/root.scss
+++ b/todolist/src/src/page/root/root.scss
@@ -1,8 +1,17 @@
 .root-container {
+  margin: 0 auto;
   max-width: 950px;
   padding: 50px 0 0 35px;
+  // overflow: hidden;
+  height: 100%;
+  position: relative;
+  z-index: 0;
 
+  > div {
+    height: 100%;
+    overflow-y: auto;
+  }
   .container-left {
-    
+
   }
 }
