--- a/app_todolist/src/src/page/content/content.scss
+++ b/app_todolist/src/src/page/content/content.scss
@@ -1,6 +1,10 @@
 .list-content {
   font-size: 16px;
+  overflow-x: hidden;
   .transaction-container {
+    overflow-x: hidden;
+    word-break: break-all;
+
     .title {
 
     }
